--- a/index.html
+++ b/index.html
@@ -1,150 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="Professional property services in Askern & Doncaster including painting, decorating, pressure washing, and more. Reliable, insured, friendly and competitively priced.">
-<meta name="author" content="Askern Property Services">
-<link rel="preload" href="/logo.png" as="image">
 
-<title>Askern Property Services</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title><!-- PAGE SPECIFIC TITLE --> | Home Maintenance Services Askern DN6</title>
+<meta name="description" content="<!-- PAGE SPECIFIC DESCRIPTION --> Reliable, local handyman and home maintenance services in Askern & Doncaster DN6. Affordable, friendly and professional.">
+<link rel="canonical" href="<!-- PAGE URL -->">
+
+<!-- Open Graph / Social -->
+<meta property="og:title" content="<!-- PAGE SPECIFIC TITLE -->">
+<meta property="og:description" content="<!-- PAGE SPECIFIC DESCRIPTION -->">
+<meta property="og:url" content="<!-- PAGE URL -->">
+<meta property="og:image" content="/logo.png">
+<meta name="twitter:card" content="summary_large_image">
 
 <style>
-/* Reset */
-*, *::before, *::after { margin: 0; padding: 0; box-sizing: border-box; }
-
-body {
-font-family: system-ui, sans-serif;
-line-height: 1.6;
-color: #222;
-background: #fff;
-}
-
-/* Header layout */
-header {
-width: 100%;
-background: #fafafa;
-border-bottom: 1px solid #e1e1e1;
-padding: 10px 20px;
-display: flex;
-justify-content: space-between;
-align-items: center;
-}
-
-header img {
-height: 90px;
-width: auto;
-}
-
-nav {
-display: flex;
-gap: 25px;
-font-size: 1.1rem;
-}
-
-nav a {
-text-decoration: none;
-color: #222;
-font-weight: 600;
-}
-
-nav a:hover {
-text-decoration: underline;
-}
-
-.call-btn a {
-background: #28a745;
-padding: 10px 18px;
-color: #fff;
-border-radius: 6px;
-font-weight: 700;
-text-decoration: none;
-display: inline-block;
-}
-
-.call-btn a:hover {
-background: #218838;
-}
-
-/* Footer */
-footer {
-background: #111;
-color: #eee;
-text-align: center;
-padding: 35px 20px;
-margin-top: 50px;
-}
-
-footer p {
-margin-bottom: 8px;
-}
-
-/* Mobile */
-@media (max-width: 780px) {
-header {
-flex-direction: column;
-gap: 15px;
-text-align: center;
-}
-nav {
-flex-wrap: wrap;
-justify-content: center;
-}
-.call-btn {
-margin-top: 5px;
-}
-}
+body{margin:0;font-family:Arial,sans-serif;line-height:1.6;color:#000;background:#fff;}
+header{display:flex;align-items:center;justify-content:space-between;padding:15px 20px;background:#f4f4f4;border-bottom:2px solid #ddd;}
+header img{height:90px;}
+nav{display:flex;align-items:center;gap:15px;}
+nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;color:#000;}
+nav a:hover{background:#e2e2e2;}
+.call-button{background-color:#1a7f33;color:#fff;}
+.call-button:hover{background-color:#166b2b;}
+footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
+footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
+footer a:hover{text-decoration:underline;}
 </style>
 
-<!-- ORGANISATION SCHEMA (SEO BOOST) -->
+<!-- LocalBusiness Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
 "@type": "LocalBusiness",
-"name": "Doncaster Property Services",
-"image": "/logo.png",
+"name": "Home Maintenance Services",
+"image": "https://steely1968.github.io/logo.png",
+"url": "https://steely1968.github.io/",
+"telephone": "+447735873694",
+"priceRange": "£",
 "address": {
 "@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
 "addressLocality": "Askern",
 "addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
 "addressCountry": "UK"
 },
-"url": "https://yourwebsite.co.uk",
-"telephone": "+447735873694",
-"servesLocation": ["Askern", "Doncaster", "Campsall", "Norton", "South Yorkshire"],
-"description": "Professional guttering, fencing, painting, decorating, pressure washing and domestic property services in Askern and Doncaster."
+"geo": {
+"@type": "GeoCoordinates",
+"latitude": 53.616,
+"longitude": -1.153
+},
+"openingHoursSpecification": [{
+"@type": "OpeningHoursSpecification",
+"dayOfWeek": ["Monday","Tuesday","Wednesday","Thursday","Friday","Saturday"],
+"opens": "08:00",
+"closes": "18:00"
+}]
 }
 </script>
-</head>
 
+<!-- PLACEHOLDER: Add page-specific Service schema and FAQ below per page -->
+
+</head>
 <body>
 
-<header aria-label="Main Website Header">
-<a href="/" aria-label="Home">
-<img src="/logo.png" alt="Askern Property Services Logo" loading="lazy" height="90">
-</a>
-
-<nav aria-label="Main Navigation">
+<!-- HEADER -->
+<header>
+<img src="/logo.png" alt="Home Maintenance Services Logo">
+<nav>
 <a href="/">Home</a>
 <a href="/services">Services</a>
 <a href="/contact">Contact</a>
+<a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
-
-<div class="call-btn">
-<a href="tel:+4477873694" aria-label="Call Now">Call Now</a>
-</div>
 </header>
 
-<!-- PAGE CONTENT WILL GO HERE -->
+<main>
+<!-- PAGE CONTENT STARTS HERE -->
+<!-- Add H1, H2, paragraphs, lists, images, quick facts, etc. -->
+</main>
 
-<footer aria-label="Website Footer">
-<p>&copy; <span id="year"></span> Askern Property Services — All Rights Reserved.</p>
-<p>Professional Property Services in Askern & Doncaster</p>
+<!-- FOOTER -->
+<footer>
+<p>
+&copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
+</p>
+<p>
+<a href="https://facebook.com" target="_blank" rel="noopener">Find us on Facebook</a>
+</p>
 </footer>
 
 <script>
-document.getElementById("year").textContent = new Date().getFullYear();
+// Dynamically set the current year
+document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
 </body>
 </html>
+
