--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title><!-- PAGE SPECIFIC TITLE --> | Home Maintenance Services Askern DN6</title>
-<meta name="description" content="<!-- PAGE SPECIFIC DESCRIPTION --> Reliable, local handyman and home maintenance services in Askern & Doncaster DN6. Affordable, friendly and professional.">
-<link rel="canonical" href="<!-- PAGE URL -->">
+<title>Property Maintenance & Handyman Services | Askern & Doncaster DN6</title>
+<meta name="description" content="Reliable property maintenance and handyman services in Askern and Doncaster DN6. Gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, and exterior decorating. Local, friendly, and affordable.">
+<link rel="canonical" href="https://steely1968.github.io/">
 
-<!-- Open Graph / Social -->
-<meta property="og:title" content="<!-- PAGE SPECIFIC TITLE -->">
-<meta property="og:description" content="<!-- PAGE SPECIFIC DESCRIPTION -->">
-<meta property="og:url" content="<!-- PAGE URL -->">
+<!-- Open Graph -->
+<meta property="og:title" content="Property Maintenance & Handyman Services | Askern & Doncaster DN6">
+<meta property="og:description" content="Reliable property maintenance and handyman services in Askern and Doncaster DN6. Gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, and exterior decorating.">
+<meta property="og:url" content="https://steely1968.github.io/">
 <meta property="og:image" content="/logo.png">
 <meta name="twitter:card" content="summary_large_image">
 
@@ -24,6 +24,10 @@ nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;
 nav a:hover{background:#e2e2e2;}
 .call-button{background-color:#1a7f33;color:#fff;}
 .call-button:hover{background-color:#166b2b;}
+main{padding:20px;max-width:900px;margin:auto;}
+h1,h2{margin-top:10px;}
+.quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
+.quick-facts ul{padding-left:20px;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
 footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
 footer a:hover{text-decoration:underline;}
@@ -61,12 +65,71 @@ footer a:hover{text-decoration:underline;}
 }
 </script>
 
-<!-- PLACEHOLDER: Add page-specific Service schema and FAQ below per page -->
+<!-- Homepage Services Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "Service",
+"name": "Property Maintenance & Handyman Services",
+"serviceType": "Gutter repairs and cleaning, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, exterior decorating",
+"provider": {
+"@type": "LocalBusiness",
+"name": "Home Maintenance Services",
+"telephone": "+447735873694",
+"address": {
+"@type": "PostalAddress",
+"streetAddress": "35 Airstone Road",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"postalCode": "DN6 0QA",
+"addressCountry": "UK"
+}
+},
+"areaServed": {
+"@type": "Place",
+"address": {
+"@type": "PostalAddress",
+"addressLocality": "Askern",
+"addressRegion": "Doncaster",
+"addressCountry": "UK"
+}
+}
+}
+</script>
+
+<!-- FAQ Schema -->
+<script type="application/ld+json">
+{
+"@context": "https://schema.org",
+"@type": "FAQPage",
+"mainEntity": [
+{
+"@type": "Question",
+"name": "Which areas do you cover?",
+"acceptedAnswer": { "@type": "Answer", "text": "We provide services across Askern, Doncaster DN6 and the surrounding South Yorkshire areas." }
+},
+{
+"@type": "Question",
+"name": "Do you offer small jobs?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, no job is too small. We handle everything from odd jobs to full exterior projects." }
+},
+{
+"@type": "Question",
+"name": "Do you charge a call-out fee?",
+"acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee." }
+},
+{
+"@type": "Question",
+"name": "Are you insured?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, fully insured for all work, giving you complete peace of mind." }
+}
+]
+}
+</script>
 
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
@@ -78,11 +141,43 @@ footer a:hover{text-decoration:underline;}
 </header>
 
 <main>
-<!-- PAGE CONTENT STARTS HERE -->
-<!-- Add H1, H2, paragraphs, lists, images, quick facts, etc. -->
+<h1>Property Maintenance & Handyman Services in Askern & Doncaster (DN6)</h1>
+
+<p>Welcome to Home Maintenance Services — your local, reliable, and friendly property maintenance provider. We specialise in keeping homes and gardens in top condition across Askern, Doncaster DN6, and surrounding areas. No job is too small or too large.</p>
+
+<h2>Our Key Services</h2>
+
+<ul>
+<li><strong>Gutter Repairs, Replacement & Cleaning:</strong> Remove blockages, repair leaks, replace damaged sections, and maintain clear gutters for a well-protected home.</li>
+<li><strong>UPVC Restoration:</strong> Revive doors, windows, and conservatories with professional cleaning, polishing, and minor repairs.</li>
+<li><strong>Gardening Services:</strong> Lawn mowing, hedge trimming, pruning, garden tidy-ups, and seasonal maintenance.</li>
+<li><strong>Exterior Carpentry:</strong> Shed construction, decking repairs, pergolas, and other outdoor timber structures.</li>
+<li><strong>Replacement Fencing:</strong> Repair or replace fencing panels for privacy, security, and aesthetic improvement.</li>
+<li><strong>Pressure Washing:</strong> Driveways, patios, walls, decking, and paths cleaned safely and effectively to remove moss, algae, and grime.</li>
+<li><strong>Exterior Decorating:</strong> High-quality painting, staining, and varnishing for doors, windows, trims, and exterior walls.</li>
+</ul>
+
+<h2>Quick Facts</h2>
+<div class="quick-facts">
+<ul>
+<li>Local handyman and property maintenance service based in Askern, Doncaster DN6</li>
+<li>No call-out fee and fair pricing</li>
+<li>Fully insured and experienced</li>
+<li>Most small jobs completed the same day</li>
+<li>Serving homes, gardens, and commercial properties</li>
+<li>Reliable, friendly, and professional service</li>
+</ul>
+</div>
+
+<h2>Areas We Cover</h2>
+<p>Askern, Doncaster, Campsall, Carcroft, Skellow, Adwick, Norton, Bentley, and surrounding South Yorkshire areas.</p>
+
+<h2>Contact Us for a Free Quote</h2>
+<p>For any property maintenance or handyman work, please get in touch. We'll provide expert advice and a free, no-obligation quote.</p>
+<p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
+
 </main>
 
-<!-- FOOTER -->
 <footer>
 <p>
 &copy; <span id="currentYear"></span> Home Maintenance Services – Askern, Doncaster DN6
@@ -93,10 +188,8 @@ footer a:hover{text-decoration:underline;}
 </footer>
 
 <script>
-// Dynamically set the current year
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
 </body>
 </html>
-
