--- a/our-services.html
+++ b/our-services.html
@@ -136,7 +136,7 @@ footer a:hover{text-decoration:underline;}
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
-<a href="/services">Services</a>
+<a href="steely1968.github.io">Our Services</a>
 <a href="/contact">Contact</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
