--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@ footer a:hover{text-decoration:underline;}
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
-<a href="steely1968.github.io/our-services">Our Services</a>
+<a href="steely1968.github.io/our-services.html">Our Services</a>
 <a href="/contact">Contact</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
