--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Property Maintenance & Handyman Services | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable property maintenance and handyman services in Askern and Doncaster DN6. Gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, and exterior decorating. Local, friendly, and affordable.">
+<title>Home Maintenance & Handyman Services | Askern & Doncaster DN6</title>
+<meta name="description" content="Reliable property maintenance and handyman services in Askern & Doncaster DN6. Gutter repairs, UPVC restoration, gardening, fencing, pressure washing, exterior carpentry, and decorating. Affordable, local, and professional.">
 <link rel="canonical" href="https://steely1968.github.io/">
 
 <!-- Open Graph -->
-<meta property="og:title" content="Property Maintenance & Handyman Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Reliable property maintenance and handyman services in Askern and Doncaster DN6. Gutter repairs, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, and exterior decorating.">
+<meta property="og:title" content="Home Maintenance & Handyman Services | Askern & Doncaster DN6">
+<meta property="og:description" content="Professional property maintenance and handyman services in Askern & Doncaster DN6. Gutter cleaning, fencing, pressure washing, exterior decorating, gardening, and more.">
 <meta property="og:url" content="https://steely1968.github.io/">
 <meta property="og:image" content="/logo.png">
 <meta name="twitter:card" content="summary_large_image">
@@ -24,8 +24,11 @@ nav a{font-weight:bold;text-decoration:none;padding:10px 16px;border-radius:6px;
 nav a:hover{background:#e2e2e2;}
 .call-button{background-color:#1a7f33;color:#fff;}
 .call-button:hover{background-color:#166b2b;}
-main{padding:20px;max-width:900px;margin:auto;}
+main{padding:20px;max-width:1000px;margin:auto;}
 h1,h2{margin-top:10px;}
+ul{padding-left:20px;}
+.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:0.25s;}
+.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px);}
 .quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
 .quick-facts ul{padding-left:20px;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
@@ -65,39 +68,7 @@ footer a:hover{text-decoration:underline;}
 }
 </script>
 
-<!-- Homepage Services Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Service",
-"name": "Property Maintenance & Handyman Services",
-"serviceType": "Gutter repairs and cleaning, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, exterior decorating",
-"provider": {
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"telephone": "+447735873694",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-}
-},
-"areaServed": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"addressCountry": "UK"
-}
-}
-}
-</script>
-
-<!-- FAQ Schema -->
+<!-- Homepage FAQ Schema -->
 <script type="application/ld+json">
 {
 "@context": "https://schema.org",
@@ -105,23 +76,23 @@ footer a:hover{text-decoration:underline;}
 "mainEntity": [
 {
 "@type": "Question",
-"name": "Which areas do you cover?",
-"acceptedAnswer": { "@type": "Answer", "text": "We provide services across Askern, Doncaster DN6 and the surrounding South Yorkshire areas." }
+"name": "Which services do you offer?",
+"acceptedAnswer": { "@type": "Answer", "text": "We provide gutter cleaning, gutter repairs and replacements, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating." }
 },
 {
 "@type": "Question",
-"name": "Do you offer small jobs?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, no job is too small. We handle everything from odd jobs to full exterior projects." }
+"name": "Do you serve Askern and Doncaster DN6?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, we are a local handyman service covering Askern, Doncaster DN6, and surrounding areas." }
 },
 {
 "@type": "Question",
-"name": "Do you charge a call-out fee?",
+"name": "Do you charge call-out fees?",
 "acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee." }
 },
 {
 "@type": "Question",
-"name": "Are you insured?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, fully insured for all work, giving you complete peace of mind." }
+"name": "Can you handle small jobs as well as larger projects?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, we handle jobs of all sizes, from minor repairs to full property maintenance projects." }
 }
 ]
 }
@@ -134,46 +105,43 @@ footer a:hover{text-decoration:underline;}
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
-<a href="/our-services">Our-Services</a>
+<a href="/our-services/">Our Services</a>
 <a href="/contact">Contact</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
 </header>
 
 <main>
-<h1>Property Maintenance & Handyman Services in Askern & Doncaster (DN6)</h1>
+<h1>Professional Handyman & Property Maintenance Services in Askern & Doncaster (DN6)</h1>
 
-<p>Welcome to Home Maintenance Services — your local, reliable, and friendly property maintenance provider. We specialise in keeping homes and gardens in top condition across Askern, Doncaster DN6, and surrounding areas. No job is too small or too large.</p>
+<p>We provide reliable, local, and affordable property maintenance solutions. Our skilled handyman services help keep your home or business safe, functional, and looking great.</p>
 
-<h2>Our Key Services</h2>
+<h2>Our Services</h2>
 
-<ul>
-<li><strong>Gutter Repairs, Replacement & Cleaning:</strong> Remove blockages, repair leaks, replace damaged sections, and maintain clear gutters for a well-protected home.</li>
-<li><strong>UPVC Restoration:</strong> Revive doors, windows, and conservatories with professional cleaning, polishing, and minor repairs.</li>
-<li><strong>Gardening Services:</strong> Lawn mowing, hedge trimming, pruning, garden tidy-ups, and seasonal maintenance.</li>
-<li><strong>Exterior Carpentry:</strong> Shed construction, decking repairs, pergolas, and other outdoor timber structures.</li>
-<li><strong>Replacement Fencing:</strong> Repair or replace fencing panels for privacy, security, and aesthetic improvement.</li>
-<li><strong>Pressure Washing:</strong> Driveways, patios, walls, decking, and paths cleaned safely and effectively to remove moss, algae, and grime.</li>
-<li><strong>Exterior Decorating:</strong> High-quality painting, staining, and varnishing for doors, windows, trims, and exterior walls.</li>
-</ul>
+<div class="service-list">
+<a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a>
+<a href="/our-services/upvc-restoration">UPVC Restoration</a>
+<a href="/our-services/gardening-services">Gardening Services</a>
+<a href="/our-services/exterior-carpentry">Exterior Carpentry</a>
+<a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a>
+<a href="/our-services/pressure-washing">Pressure Washing</a>
+<a href="/our-services/exterior-decorating">Exterior Decorating</a>
+</div>
 
-<h2>Quick Facts</h2>
+<h2>Why Choose Home Maintenance Services?</h2>
 <div class="quick-facts">
 <ul>
-<li>Local handyman and property maintenance service based in Askern, Doncaster DN6</li>
-<li>No call-out fee and fair pricing</li>
-<li>Fully insured and experienced</li>
-<li>Most small jobs completed the same day</li>
-<li>Serving homes, gardens, and commercial properties</li>
-<li>Reliable, friendly, and professional service</li>
+<li>Local handyman service in Askern & Doncaster DN6</li>
+<li>No call-out fees and transparent pricing</li>
+<li>Experienced in small repairs and large maintenance projects</li>
+<li>Fully insured, professional, and reliable</li>
+<li>Friendly service with attention to detail</li>
+<li>Quick response and same-day service for many small jobs</li>
 </ul>
 </div>
 
-<h2>Areas We Cover</h2>
-<p>Askern, Doncaster, Campsall, Carcroft, Skellow, Adwick, Norton, Bentley, and surrounding South Yorkshire areas.</p>
-
-<h2>Contact Us for a Free Quote</h2>
-<p>For any property maintenance or handyman work, please get in touch. We'll provide expert advice and a free, no-obligation quote.</p>
+<h2>Contact Us Today</h2>
+<p>For advice, a free quote, or to book any of our services, get in touch now.</p>
 <p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
