--- a/our-services.html
+++ b/our-services.html
@@ -4,14 +4,14 @@
 
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Professional Property Maintenance & Handyman Services | Askern & Doncaster DN6</title>
-<meta name="description" content="Reliable property maintenance and handyman services in Askern & Doncaster DN6. Gutter work, UPVC restoration, gardening, carpentry, fencing, pressure washing, and exterior decorating. Local, friendly, and affordable.">
-<link rel="canonical" href="https://steely1968.github.io/services/">
+<title>Our Services | Home Maintenance Services Askern DN6</title>
+<meta name="description" content="Discover our full range of handyman and property maintenance services in Askern & Doncaster DN6. From gutter cleaning to exterior decorating, we provide professional, reliable, and affordable services.">
+<link rel="canonical" href="https://steely1968.github.io/our-services/">
 
 <!-- Open Graph -->
-<meta property="og:title" content="Professional Property Maintenance & Handyman Services | Askern & Doncaster DN6">
-<meta property="og:description" content="Providing reliable property maintenance services in Askern and Doncaster DN6 including gutter work, UPVC restoration, gardening, exterior carpentry, fencing, pressure washing, and exterior decorating.">
-<meta property="og:url" content="https://steely1968.github.io/services/">
+<meta property="og:title" content="Our Services | Home Maintenance Services Askern DN6">
+<meta property="og:description" content="Professional handyman and property maintenance services in Askern & Doncaster DN6. Explore gutter cleaning, pressure washing, fencing, gardening, exterior carpentry, and more.">
+<meta property="og:url" content="https://steely1968.github.io/our-services/">
 <meta property="og:image" content="/logo.png">
 <meta name="twitter:card" content="summary_large_image">
 
@@ -27,8 +27,9 @@ nav a:hover{background:#e2e2e2;}
 main{padding:20px;max-width:900px;margin:auto;}
 h1,h2{margin-top:10px;}
 ul{padding-left:20px;}
+.service-list a{display:block;background:#f8f8f8;padding:14px 18px;margin:12px 0;border-radius:8px;border:1px solid #ddd;text-decoration:none;color:#000;font-size:17px;font-weight:bold;transition:0.25s;}
+.service-list a:hover{background:#e8ffe8;border-color:#28a745;transform:translateX(4px);}
 .quick-facts{background:#f8f8f8;padding:20px;border-radius:10px;border:1px solid #ddd;margin:25px 0;}
-.quick-facts ul{padding-left:20px;}
 footer{padding:25px;text-align:center;font-size:14px;color:#666;border-top:1px solid #ddd;}
 footer a{color:#1864d8;font-weight:bold;text-decoration:none;}
 footer a:hover{text-decoration:underline;}
@@ -66,38 +67,6 @@ footer a:hover{text-decoration:underline;}
 }
 </script>
 
-<!-- Services Schema for Homepage / Main Service Page -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "Service",
-"name": "Property Maintenance & Handyman Services",
-"serviceType": "Gutter repairs and cleaning, UPVC restoration, gardening services, exterior carpentry, fencing, pressure washing, exterior decorating",
-"provider": {
-"@type": "LocalBusiness",
-"name": "Home Maintenance Services",
-"telephone": "+447735873694",
-"address": {
-"@type": "PostalAddress",
-"streetAddress": "35 Airstone Road",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"postalCode": "DN6 0QA",
-"addressCountry": "UK"
-}
-},
-"areaServed": {
-"@type": "Place",
-"address": {
-"@type": "PostalAddress",
-"addressLocality": "Askern",
-"addressRegion": "Doncaster",
-"addressCountry": "UK"
-}
-}
-}
-</script>
-
 <!-- FAQ Schema -->
 <script type="application/ld+json">
 {
@@ -106,23 +75,23 @@ footer a:hover{text-decoration:underline;}
 "mainEntity": [
 {
 "@type": "Question",
-"name": "Which areas do you cover?",
-"acceptedAnswer": { "@type": "Answer", "text": "We cover Askern, Doncaster DN6, and surrounding South Yorkshire areas." }
+"name": "Which services do you provide?",
+"acceptedAnswer": { "@type": "Answer", "text": "We provide gutter cleaning, repairs, and replacement, UPVC restoration, gardening services, exterior carpentry, fence construction and repairs, pressure washing, and exterior decorating." }
 },
 {
 "@type": "Question",
-"name": "Do you handle small jobs?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, no job is too small. From odd jobs to full exterior projects, we provide professional solutions." }
+"name": "Do you serve Askern and Doncaster DN6?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, we provide local handyman and property maintenance services throughout Askern, Doncaster DN6, and surrounding areas." }
 },
 {
 "@type": "Question",
-"name": "Do you charge a call-out fee?",
-"acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee." }
+"name": "Do you charge call-out fees?",
+"acceptedAnswer": { "@type": "Answer", "text": "No, we never charge a call-out fee for our services." }
 },
 {
 "@type": "Question",
-"name": "Are you insured?",
-"acceptedAnswer": { "@type": "Answer", "text": "Yes, we are fully insured for all work we undertake." }
+"name": "Are your services suitable for small jobs?",
+"acceptedAnswer": { "@type": "Answer", "text": "Yes, we can handle jobs of all sizes, from minor repairs to full installations." }
 }
 ]
 }
@@ -131,57 +100,47 @@ footer a:hover{text-decoration:underline;}
 </head>
 <body>
 
-<!-- HEADER -->
 <header>
 <img src="/logo.png" alt="Home Maintenance Services Logo">
 <nav>
 <a href="/">Home</a>
-<a href="steely1968.github.io/our-services">Our Services</a>
+<a href="/our-services/">Our Services</a>
 <a href="/contact">Contact</a>
 <a href="tel:07735873694" class="call-button">Call 07735 873694</a>
 </nav>
 </header>
 
 <main>
-<h1>Property Maintenance & Handyman Services in Askern & Doncaster (DN6)</h1>
+<h1>Our Property Maintenance & Handyman Services in Askern & Doncaster DN6</h1>
 
-<p>Welcome to Home Maintenance Services — your local, reliable, and affordable property maintenance and handyman service provider. We offer a wide range of services to keep your home, garden, and exterior spaces in top condition.</p>
+<p>At Home Maintenance Services, we provide professional, reliable, and affordable handyman and property maintenance solutions. From general repairs to exterior renovations, we cater to all types of residential and commercial properties.</p>
 
 <h2>Explore Our Services</h2>
-<ul>
-<li><a href="/services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a> – Keep your gutters clear and functional to protect your home from water damage.</li>
-<li><a href="/services/upvc-restoration">UPVC Restoration</a> – Revive windows, doors, and conservatories with professional cleaning and minor repairs.</li>
-<li><a href="/services/gardening-services">Gardening Services</a> – Lawn care, hedge trimming, pruning, and garden tidy-ups for a neat and healthy garden.</li>
-<li><a href="/services/exterior-carpentry">Exterior Carpentry</a> – Shed construction, decking repairs, pergolas, and other outdoor timber structures.</li>
-<li><a href="/services/fence-construction-repairs">Fence Construction & Repairs</a> – Enhance privacy and security with durable fencing solutions.</li>
-<li><a href="/services/pressure-washing">Pressure Washing</a> – Clean driveways, patios, walls, decking, and paths safely and effectively.</li>
-<li><a href="/services/exterior-decorating">Exterior Decorating</a> – Painting, staining, and varnishing to enhance and protect your property’s exterior surfaces.</li>
-</ul>
+
+<div class="service-list">
+<a href="/our-services/gutter-replacement-repairs-clearing">Gutter Replacement, Repairs & Cleaning</a>
+<a href="/our-services/upvc-restoration">UPVC Restoration</a>
+<a href="/our-services/gardening-services">Gardening Services</a>
+<a href="/our-services/exterior-carpentry">Exterior Carpentry</a>
+<a href="/our-services/fence-construction-repairs">Fence Construction & Repairs</a>
+<a href="/our-services/pressure-washing">Pressure Washing</a>
+<a href="/our-services/exterior-decorating">Exterior Decorating</a>
+</div>
 
 <h2>Why Choose Us?</h2>
-<ul>
-<li>Local handyman and property maintenance service based in Askern, Doncaster DN6</li>
-<li>No call-out fees and fair pricing</li>
-<li>Fully insured and professional service</li>
-<li>Most small jobs completed the same day</li>
-<li>Serving homes, gardens, and commercial properties</li>
-<li>Reliable, friendly, and efficient workmanship</li>
-</ul>
-
-<h2>Quick Facts</h2>
 <div class="quick-facts">
 <ul>
-<li>Gutter work, UPVC restoration, gardening, carpentry, fencing, pressure washing, and exterior decorating</li>
-<li>Affordable, local, and professional handyman service</li>
-<li>Clear, visible links to each service page for easy navigation</li>
-<li>Fully insured and experienced team</li>
-<li>Customer satisfaction guaranteed</li>
-<li>Serving Askern, Doncaster DN6, and surrounding South Yorkshire areas</li>
+<li>Local handyman and property maintenance service in Askern & Doncaster DN6</li>
+<li>No call-out fees, fair and transparent pricing</li>
+<li>Fully insured, professional, and reliable workmanship</li>
+<li>Experienced with both small jobs and larger property maintenance projects</li>
+<li>Fast, friendly, and trustworthy service</li>
+<li>Dedicated to improving your property’s appearance, safety, and functionality</li>
 </ul>
 </div>
 
 <h2>Contact Us</h2>
-<p>For any property maintenance work, advice, or a free quote, contact us today. Our team is happy to assist with all jobs, big or small.</p>
+<p>For more information or a free quote on any of our services, please get in touch today.</p>
 <p><strong>Call:</strong> <a href="tel:07735873694">07735 873694</a></p>
 
 </main>
@@ -196,7 +155,6 @@ footer a:hover{text-decoration:underline;}
 </footer>
 
 <script>
-// Dynamically set the current year
 document.getElementById("currentYear").textContent = new Date().getFullYear();
 </script>
 
